--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <h1>Boyd Vocabulary</h1>
     <div class="alphabet-container">
         <script>
-            document.write("ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").map(l => `<button class='letter-btn' onclick='showWords("${l.toLowerCase()}", this)'>${l}</button>`).join(" "));
+            document.write("ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").map(l => `<button class='letter-btn' onclick='showWords("letter", "${l.toLowerCase()}")'>${l}</button>`).join(" "));
         </script>
     </div>
     <div class="category-container" id="categoryButtons"></div>
@@ -119,50 +119,50 @@
 
     <script>
        let wordsData = {};
-let sentenceAudio = new Audio();
+        let sentenceAudio = new Audio();
 
-document.addEventListener("DOMContentLoaded", function () {
-    fetch("https://boydyang-designer.github.io/English-vocabulary/Z_total_words.json")
-        .then(res => res.json())
-        .then(data => {
-            wordsData = data["New Words"];
-            createCategoryButtons(); // 確保分類按鈕載入
-        })
-        .catch(err => console.error("讀取 JSON 失敗:", err));
-});
+        document.addEventListener("DOMContentLoaded", function () {
+            fetch("https://boydyang-designer.github.io/English-vocabulary/Z_total_words.json")
+                .then(res => res.json())
+                .then(data => {
+                    wordsData = data; // 保持完整 JSON 結構
+                    createCategoryButtons();
+                })
+                .catch(err => console.error("讀取 JSON 失敗:", err));
+        });
 
-function createCategoryButtons() {
-    if (!wordsData || !Array.isArray(wordsData)) return;
-    let categories = [...new Set(wordsData.map(w => w["分類"] || "未分類"))];
-    document.getElementById("categoryButtons").innerHTML = categories
-        .map(c => `<button class='letter-btn' onclick='showWords("category", "${c}")'>${c}</button>`)
-        .join(" ");
-}
+        function createCategoryButtons() {
+            if (!wordsData || !Array.isArray(wordsData["New Words"])) return;
+            let categories = [...new Set(wordsData["New Words"].map(w => w["分類"] || "未分類"))];
+            document.getElementById("categoryButtons").innerHTML = categories
+                .map(c => `<button class='letter-btn' onclick='showWords("category", "${c}")'>${c}</button>`)
+                .join(" ");
+        }
 
-function showWords(type, value) {
-    if (!wordsData || !Array.isArray(wordsData)) return;
-    let filteredWords = wordsData.filter(w => 
-        type === "letter" ? w.Words.toLowerCase().startsWith(value.toLowerCase()) : (w["分類"] || "未分類") === value
-    );
+        function showWords(type, value) {
+            if (!wordsData || !Array.isArray(wordsData["New Words"])) return;
+            let filteredWords = wordsData["New Words"].filter(w => 
+                type === "letter" ? w.Words.toLowerCase().startsWith(value.toLowerCase()) : (w["分類"] || "未分類") === value
+            );
 
-    let listContainer = document.getElementById("wordList");
-    listContainer.innerHTML = '<button class="button" onclick="backToAlphabet()">⬅ 返回字母列表</button>';
+            let listContainer = document.getElementById("wordList");
+            listContainer.innerHTML = '<button class="button" onclick="backToAlphabet()">⬅ 返回字母列表</button>';
 
-    filteredWords.forEach(word => {
-        let item = document.createElement('p');
-        item.textContent = word.Words;
-        item.className = 'word-item';
-        item.onclick = function() { showDetails(word); };
-        listContainer.appendChild(item);
-    });
-}
+            filteredWords.forEach(word => {
+                let item = document.createElement('p');
+                item.textContent = word.Words;
+                item.className = 'word-item';
+                item.onclick = function() { showDetails(word); };
+                listContainer.appendChild(item);
+            });
+        }
 
-function backToAlphabet() {
-    document.getElementById('wordList').style.display = 'none';
-    document.getElementById('wordDetails').style.display = 'none';
-    document.querySelector('.alphabet-container').style.display = 'block'; 
-    document.querySelector('.category-container').style.display = 'block'; 
-}
+        function backToAlphabet() {
+            document.getElementById('wordList').style.display = 'none';
+            document.getElementById('wordDetails').style.display = 'none';
+            document.querySelector('.alphabet-container').style.display = 'block'; 
+            document.querySelector('.category-container').style.display = 'block'; 
+        }
         
         function showWords(letter, btn) {
             let listContainer = document.getElementById('wordList');
