--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 .then(res => res.json())
                 .then(data => {
                     wordsData = data;
-                    createCategoryButtons(); 
+                    createCategoryButtons(); // ✅ 確保分類按鈕顯示
                 })
                 .catch(err => console.error("讀取 JSON 失敗:", err));
         });
