--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="category-container" id="categoryButtons"></div>
     <div class="container">
         <div id="wordList" class="word-list">
-            <button class="button" onclick="backToAlphabet()">⬅ 返回字母列表</button>
+            <button class="button" onclick="backToAlphabet()">🏠 返回字母列表</button>
         </div>
         <div id="wordDetails" class="details">
             <button class="button" onclick="backToWords()">⬅ 返回</button>
