--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <button class="button" onclick="backToAlphabet()">🏠 返回字母列表</button>
         </div>
         <div id="wordDetails" class="details">
-            <button class="button" onclick="backToWords()">⬅ 返回</button>
+            <button class="button" onclick="backToWords()">⬅⬅ 返回</button>
             <h2 id="wordTitle"></h2>
             <div id="phoneticContainer"></div>
             <div id="chineseContainer"></div>
