--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ function showDetails(word) {
         </div>
         <p>${word['English meaning']}</p>
         <button class='button' onclick='backToWordList()'>⬅ 返回</button>
+        <button class='button' onclick='backToWordList()'>⬅⬅ 返回</button>
     `;
     
     document.getElementById('phoneticContainer').innerHTML = phonetics;
