--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             border: none;
             background: #555;
             color: white;
-            border-radius: 5px;
+            border-radius: 20px;
         }
-        .letter-btn:hover {
+        :hover {
             background: #777;
         }
         .container {
