--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             margin: 15px 0;
         }
         .letter-btn {
-            padding: 10px;
+            padding: 15px 20px;
+            font-size: 18px; /* 調整字母大小 */
             margin: 5px;
             cursor: pointer;
             border: none;
-            background: #555;
-            color: white;
-            border-radius: 10px;
+            background: #555; /* 背景顏色 */
+            color: white; /* 文字顏色 */
+            border-radius: 20px;
         }
         :hover {
             background: #777;
