--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             margin: 15px 0;
         }
         .letter-btn {
-            padding: 10px;
+            padding: 10px 15px;
             margin: 5px;
             cursor: pointer;
             border: none;
             background: #555;
             color: white;
-            border-radius: 5px;
+            border-radius: 15px;
         }
         .letter-btn:hover {
             background: #777;
