--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyd Vocabulary</title>
-<style>
-        body {
+    <style>
+        body { /* 設定整體頁面的字型、邊距與背景顏色 */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background: #f9f9f9;
         }
-        h1 {
+        h1 { /* 設定標題的樣式，置中並使用深色背景 */
             text-align: center;
             background: #333;
             color: white;
@@ -25,11 +25,11 @@
             margin: 0;
             font-size: 24px;
         }
-        .alphabet-container {
+        .alphabet-container { /* 設定字母按鈕區域的間距與對齊方式 */
             text-align: center;
             margin: 15px 0;
         }
-        .letter-btn {
+        .letter-btn { /* 設定字母按鈕的大小、顏色與圓角 */
             padding: 10px 15px;
             margin: 5px;
             cursor: pointer;
@@ -38,35 +38,35 @@
             color: white;
             border-radius: 15px;
         }
-        .letter-btn:hover {
+        .letter-btn:hover { /* 設定字母按鈕的懸停效果 */
             background: #777;
         }
-        .container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
+        .container { /* 設定主要內容的排列方式與間距，使其水平排列 */
+            display: flex; /* 讓內容以彈性盒子方式排列，達到橫向並排效果 */
+            justify-content: center; /* 讓內容置中對齊 */
+            gap: 20px; /* 設定區塊之間的間距 */
             margin: 20px;
         }
-        .word-list {
+        .word-list { /* 設定單字列表區域的大小、邊框與背景 */
             width: 300px;
             max-height: 400px;
-            overflow-y: auto;
+            overflow-y: auto; /* 允許垂直滾動 */
             background: white;
             padding: 15px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .word-item {
-            cursor: pointer;
-            padding: 8px;
-            border-bottom: 1px solid #ddd;
-            color: #007bff;
+        .word-item { /* 設定單字列表內的單字樣式 */
+            cursor: pointer; /* 讓滑鼠變成可點擊的指標，表示此元素可互動 */
+            padding: 8px; /* 設定內邊距，增加內容與邊框的距離，提高可讀性 */
+            border-bottom: 1px solid #ddd; /* 添加底部邊框，讓單字列表更清晰可分辨 */
+            color: #007bff; /* 設定單字的顏色，使用藍色強調可點擊性 */
         }
-        .word-item:hover {
-            background: #f0f0f0;
-            font-weight: bold;
+        .word-item:hover { /* 設定單字懸停時的背景顏色與字體加粗效果 */
+            background: #f0f0f0; /* 滑鼠懸停時變為淺灰色，提升互動體驗 */
+            font-weight: bold; /* 懸停時加粗字體，使其更加明顯 */
         }
-        .details {
+        .details { /* 設定第三層詳情區塊的樣式 */
             width: 400px;
             background: white;
             padding: 15px;
@@ -75,7 +75,7 @@
             display: none;
             position: relative;
         }
-        #meaningContainer {
+        #meaningContainer { /* 設定英文解釋區域的滾動效果 */
             max-height: 300px;
             overflow-y: auto;
             padding-right: 10px;
@@ -84,7 +84,7 @@
             padding: 10px;
             border-radius: 10px;
         }
-        .button {
+        .button { /* 設定所有按鈕的基本樣式 */
             display: block;
             width: 150px;
             height: 50px;
@@ -98,22 +98,22 @@
             margin: 10px auto;
             font-weight: bold;
         }
-        .button:hover {
+        .button:hover { /* 設定按鈕懸停時的顏色變化 */
             background-color: #0056b3;
         }
-        .audio-controls {
+        .audio-controls { /* 設定音頻控制按鈕的樣式與固定底部位置 */
             display: flex;
             justify-content: space-around;
             background: white;
             padding: 10px;
             border-radius: 10px;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-            position: sticky;
+            position: sticky; /* 讓按鈕固定在底部 */
             bottom: 0;
             left: 0;
             width: 100%;
         }
-        .audio-btn {
+        .audio-btn { /* 設定音頻按鈕的樣式 */
             padding: 12px 18px;
             background-color: #444;
             color: white;
@@ -122,7 +122,7 @@
             cursor: pointer;
             font-weight: bold;
         }
-        .audio-btn:hover {
+        .audio-btn:hover { /* 設定音頻按鈕懸停時的顏色變化 */
             background-color: #222;
         }
     </style>
